--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,7 @@
 [versions]
 agp = "8.6.1"
 datastorePreferences = "1.1.2"
+hiltAndroid = "2.55"
 kotlin = "1.9.20"
 coreKtx = "1.15.0"
 junit = "4.13.2"
@@ -11,17 +12,19 @@ material = "1.12.0"
 activity = "1.10.0"
 constraintlayout = "2.2.0"
 
-navigationFragment = "2.8.6"
+navigationFragment = "2.8.7"
 kotlinxSerializationJson = "1.8.0"
 kotlinSerialization = "2.1.0"
 okhttp = "4.12.0"
 retrofit = "2.11.0"
 glide = "4.16.0"
-pagingRuntime = "3.3.5"
+pagingRuntime = "3.3.6"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 androidx-datastore-preferences = { module = "androidx.datastore:datastore-preferences", version.ref = "datastorePreferences" }
+hilt-android = { module = "com.google.dagger:hilt-android", version.ref = "hiltAndroid" }
+hilt-android-compiler = { module = "com.google.dagger:hilt-android-compiler", version.ref = "hiltAndroid" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
@@ -43,5 +46,9 @@ androidx-paging-runtime = { module = "androidx.paging:paging-runtime", version.r
 android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 
+kapt = { id = "kotlin-kapt" }
+
 navigation-safeargs-kotlin = { id = "androidx.navigation.safeargs.kotlin", version.ref = "navigationFragment" }
 kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlinSerialization" }
+
+dagger-hilt-android = { id = "com.google.dagger.hilt.android", version.ref = "hiltAndroid" }
