--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.Homework"
         tools:targetApi="31">
         <activity
-            android:name="com.perullheim.homework.presentation.activity.MainActivity"
+            android:name="com.perullheim.homework.presentation.MainActivity"
             android:exported="true"
             android:theme="@style/Theme.Homework">
             <intent-filter>
