--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -15,6 +15,7 @@ serialization = "1.6.3"
 
 #DI
 hiltAndroidVersion = "2.55"
+hiltNavigationCompose = "1.2.0"
 
 #Network
 retrofit = "2.11.0"
@@ -43,6 +44,7 @@ navigation-compose = { module = "androidx.navigation:navigation-compose", versio
 
 #DI
 hilt-android = { module = "com.google.dagger:hilt-android", version.ref = "hiltAndroidVersion" }
+androidx-hilt-navigation-compose = { module = "androidx.hilt:hilt-navigation-compose", version.ref = "hiltNavigationCompose" }
 hilt-android-compiler = { module = "com.google.dagger:hilt-android-compiler", version.ref = "hiltAndroidVersion" }
 
 #Network
@@ -54,6 +56,7 @@ logging-interceptor = { module = "com.squareup.okhttp3:logging-interceptor", ver
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
+compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 
 kapt = { id = "org.jetbrains.kotlin.kapt", version.ref = "kotlin" }
 
