--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <application
+        android:name=".App"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -13,7 +14,7 @@
         android:theme="@style/Theme.Homework"
         tools:targetApi="31">
         <activity
-            android:name="com.perullheim.homework.presentation.activity.MainActivity"
+            android:name="com.perullheim.homework.presentation.MainActivity"
             android:exported="true"
             android:theme="@style/Theme.Homework">
             <intent-filter>
