--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -16,6 +16,9 @@ serialization = "1.6.3"
 #Navigation
 composeNavigation = "2.8.9"
 
+#UI
+coil = "3.1.0"
+
 #DI
 hiltAndroidVersion = "2.56"
 hiltNavigationCompose = "1.2.0"
@@ -51,6 +54,8 @@ navigation-compose = { module = "androidx.navigation:navigation-compose", versio
 
 #UI
 androidx-material-icons-extended = { group = "androidx.compose.material", name = "material-icons-extended" }
+coil-compose = { module = "io.coil-kt.coil3:coil-compose", version.ref = "coil" }
+coil-network-okhttp = { module = "io.coil-kt.coil3:coil-network-okhttp", version.ref = "coil" }
 
 #DI
 hilt-android = { module = "com.google.dagger:hilt-android", version.ref = "hiltAndroidVersion" }
